--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "windy-plugin-template",
-    "version": "2.0.2",
-    "description": "Template for developing Windy Plugins",
+    "name": "windy-plugin-picker-tools",
+    "version": "0.0.1",
+    "description": "windy picker tools",
     "main": "dist/plugin.min.js",
     "type": "module",
     "scripts": {
