README and small changes

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,5 +30,5 @@
             ],
         }
     },
-    "include": ["**/*.ts", "**/*.svelte"],
+    "include": ["**/*.ts", "**/*.svelte", "src/pickertools_main.js"],
 }
